# level-bot

./: .dockerignore  .env.coolify.example  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  conftest.py  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260506_000000_a1b2c3d4e5f6_initial_schema.py  20260506_120000_b2c3d4e5f6a7_add_daily_stats_covering_indexes.py  20260511_120000_c3d4e5f6a7b8_add_reaction_counts.py  20260511_180000_d4e5f6a7b8c9_add_excluded_users.py  20260511_190000_e5f6a7b8c9d0_add_reactions_table.py  20260511_200000_f6a7b8c9d0e1_add_reactions_created_at_idx.py  20260516_210000_a7b8c9d0e1f2_add_level_role_awards_and_role_meta.py  20260516_233000_b8c9d0e1f2a3_add_level_role_sync_timestamps.py  20260517_030000_c9d0e1f2a3b4_add_slot_to_level_role_awards.py  20260517_070000_d0e1f2a3b4c5_add_level_xp_weight_logs.py  20260518_010000_e1f2a3b4c5d6_add_grant_mode_to_level_role_awards.py  20260520_000000_f2a3b4c5d6e7_lower_current_xp_weights.py  20260522_000000_a9b0c1d2e3f4_add_xp_weight_change_logs.py  20260522_010000_b0c1d2e3f4a5_add_xp_weight_rollback_target.py  20260522_020000_c1d2e3f4a5b6_add_xp_weight_versions.py  20260523_000000_d2e3f4a5b6c7_add_social_edges_daily.py  20260523_010000_e3f4a5b6c7d8_add_guild_member_meta.py  (+5 more)
docs/: coolify.md  external-api.md  xp-accounting-migration-plan.md
frontend/: .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  railway.toml
scripts/: backfill_chill_places_from_intro.py  release.sh  start-all.sh  start-api.sh  start-bot.sh
src/: __init__.py  bot.py  config.py  constants.py  level_roles.py  logging_config.py  main.py  migrations.py  test_config.py  test_date_window.py  test_main.py  test_migrations.py  test_utils.py  utils.py
(+142 files in other folders)
